# Personality

./: .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
app/: main.py
backend/: README.md  alembic.ini
docker/: Dockerfile
docs/: 02_architecture.md  03_identity_roles_skills.md  04_memory_system.md  07_agent_system.md  10_future_vision.md  11_event_contact.md  12_data_model.md  14_build_roadmap.md  15_runtime_flow.md  16_agent_contracts.md  17_logging_and_debugging.md  20_action_system.md  21_goal_task_system.md  23_proactive_system.md  24_system_guardrails.md  25_first_iteration_plan.md  26_env_and_config.md  CONTRIBUTING-DOCS.md  README.md  index.md  overview.md
mobile/: README.md
scripts/: run_behavior_validation.ps1  run_behavior_validation.py  run_behavior_validation.sh  run_db_migrations.ps1  run_db_migrations.sh  run_reflection_queue_once.ps1  run_reflection_queue_once.py  run_reflection_queue_once.sh  run_release_smoke.ps1  run_release_smoke.sh  setup_windows.ps1
tests/: test_action_executor.py  test_adaptive_policy.py  test_api_routes.py  test_behavior_validation_script.py  test_config.py  test_connector_policy.py  test_context_agent.py  test_coolify_compose.py  test_delivery_router.py  test_deployment_trigger_scripts.py  test_embedding_strategy.py  test_expression_agent.py  test_goal_task_signals.py  test_graph_stage_adapters.py  test_graph_state_contract.py  test_language_runtime.py  test_main_lifespan_policy.py  (+13 more)
web/: index.html  (+4 more)
(+470 files in other folders)
