[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion"
version = "0.1.0"
description = "AION MVP runtime with FastAPI, PostgreSQL memory and Telegram webhook support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.15.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "openai>=1.75.0,<2.0.0",
  "langgraph>=1.1.8,<2.0.0",
  "pgvector>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
]
langchain = [
  "langchain-core>=0.3.0,<1.0.0",
]
vector = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
